# bgg-lib

./: Cargo.toml  LICENSE  README.md  build.rs  game.xslt  get-all-games.sh  parse-all-games.sh
.github/: dependabot.yaml
.github/workflows/: code-quality.yaml  docs.yaml
src/: bgg.rs  collection.rs  error.rs  lib.rs  options.rs  request.rs  thing.rs
src/bgg/: collection.rs  error.rs  request.rs  thing.rs
src/bgg/thing/: thing1.rs  thing2.rs  xslt.rs
src/options/: collections.rs  thing.rs
src/thing/: thing1.rs  thing2.rs  xslt.rs
test/: eclipse-transformed.xml  eclipse.xml  empty-collection.xml  enormity.xml  fire-and-ice-transformed.xml  tower-capture-transformed.xml  unixgeek.xml  unknown-errors.xml
