[package]
name = "bgg-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
libxslt = "0.1.2"
libxml = "0.3.3"
log = "0.4.22"
reqwest = { version = "0.12.12", default-features = false, features = ["gzip", "rustls-tls", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "2.0.9"

