[package]
name = "bgg-lib"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/unixgeek/bgg-lib"

[dependencies]
libxslt = "=0.1.2"
libxml = "=0.3.8"
log = "=0.4.29"
ureq = "3.0.5"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "=0.8.1"
thiserror = "2.0.11"

[features]
default = []
# For more debug to help understand the bgg xmlapi.
moar-debug = []
